--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.5
+  dartz: ^0.10.1
+  device_preview: ^1.1.0
+  dio: ^5.4.3+1
+
 
 dev_dependencies:
   flutter_test:
